--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - pip install mock
   - pip haas
   - pip install traits
-  - pip install coverage
+  - pip install sphinx
   - python setup.py develop
 script:
   - haas
