--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,19 @@
 language: python
-python:
-  - 2.6
-  - 2.7
-  - 3.2
-  - 3.3
-  - 3.4
+matrix:
+  include:
+    - python: "2.6"
+      env: REQUIREMENTS=test-requirements.txt
+    - python: "2.7"
+      env: REQUIREMENTS=test-requirements.txt
+    - python: "3.2"
+      env: REQUIREMENTS=python32-test-requirements.txt
+    - python: "3.3"
+      env: REQUIREMENTS=test-requirements.txt
+    - python: "3.4"
+      env: REQUIREMENTS=test-requirements.txt
 before_install:
   - pip install cython
-  - pip install -r test_requirements.txt
+  - pip install -r $REQUIREMENTS
 install:
   - python setup.py develop
 script:
